fix table background overflow

--- a/torchci/components/hud.module.css
+++ b/torchci/components/hud.module.css
@@ -3,6 +3,15 @@
   border-collapse: collapse;
   width: max-content;
   line-height: 1;
+  padding: 0;
+}
+
+/* Table wrapper with background to support rotated headers */
+.hudTableContainer {
+  background-color: var(--dropdown-bg);
+  display: inline-block;
+  padding-right: 100px;
+  margin-right: -100px; /* Offset the padding to maintain original spacing */
 }
 
 /* Fix the width of these columns to avoid layout shift when loading the HUD
@@ -22,6 +31,7 @@
 .colJob {
   width: 1.2ch;
   min-width: 14px;
+  position: relative; /* Add this to extend background */
 }
 .colAuthor {
   width: 12ch;
@@ -51,7 +61,7 @@
   flex: 1;
 }
 
-/* code to roatate the workflow name headers */
+/* code to rotate the workflow name headers */
 .jobHeader {
   font-family: sans-serif;
   height: 150px;
@@ -59,6 +69,7 @@
   font-family: sans-serif;
   padding-right: 4px;
 }
+
 
 .jobHeaderName {
   transform: translate(5px, 60px) rotate(315deg);
